refactor button styles in app component and update photo page to display dynamic ID

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar-row class="toolbar">
    
-        <a [routerLink]="['/photos']"  mat-fab extended>
+        <a [routerLink]="['/photos']"  mat-stroked-button extended>
           <mat-icon>dashboard</mat-icon>
           Photos
         </a>
      
 
-        <a [routerLink]="['/favourites']"  mat-fab extended>
+        <a [routerLink]="['/favourites']"  mat-stroked-button extended>
           <mat-icon>favorite</mat-icon>
           Favourites
         </a>
